# langdict

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/langdict/: __init__.py  langdict.py
src/langdict/builders/: __init__.py  base.py  chat_prompt.py  lite_llm.py  output_parser.py  text_prompt.py  trace.py
src/langdict/chat_models/: __init__.py  litellm.py
src/langdict/modules/: langdict_module.py  module.py  parameter.py
src/langdict/modules/compressions/: __init__.py  llm_lingua2.py
src/langdict/modules/rags/self_rag/: __init__.py  is_relevant.py  is_support.py  is_useful.py  need_retrieve.py
src/langdict/modules/rankings/: __init__.py  rank_gpt.py
src/langdict/specs/: __init__.py  base.py  lang.py  llm.py  output.py  prompt.py
src/langdict/traces/: __init__.py  backend.py
src/langdict/traces/callbacks/: __init__.py  stdout.py
tests/langdict/: test_langdict.py  test_langdict_openai.py
